generated-sources/antlr3/com/soebes/subversion/sapm/parser/SAFPParser.java
// $ANTLR 3.3 Nov 30, 2010 12:46:29 com/soebes/subversion/sapm/parser/SAFP.g 2011-04-17 20:02:23

    package com.soebes.subversion.sapm.parser;

    import com.soebes.subversion.sapm.User;
    import com.soebes.subversion.sapm.Users;
    import com.soebes.subversion.sapm.UserFactory;
    import com.soebes.subversion.sapm.Group;
    import com.soebes.subversion.sapm.Groups;
    import com.soebes.subversion.sapm.Alias;
    import com.soebes.subversion.sapm.Aliases;
    import com.soebes.subversion.sapm.AccessRule;
    import com.soebes.subversion.sapm.AccessRules;
    import com.soebes.subversion.sapm.Access;
    import com.soebes.subversion.sapm.AccessLevel;
    import com.soebes.subversion.sapm.IPrincipal;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class SAFPParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "NL", "EQUAL", "ID", "GROUPS", "ALIASES", "PATH", "WS", "CHARACTERS", "INTEGER_DIGITS", "'['", "']'", "':'", "'~'", "'*'", "'$authenticated'", "'$anonymous'", "'r'", "'R'", "'w'", "'W'", "'rw'", "'RW'", "','", "'&'", "'@'"
    };
    public static final int EOF=-1;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int NL=4;
    public static final int EQUAL=5;
    public static final int ID=6;
    public static final int GROUPS=7;
    public static final int ALIASES=8;
    public static final int PATH=9;
    public static final int WS=10;
    public static final int CHARACTERS=11;
    public static final int INTEGER_DIGITS=12;

    // delegates
    // delegators


        public SAFPParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public SAFPParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return SAFPParser.tokenNames; }
    public String getGrammarFileName() { return "com/soebes/subversion/sapm/parser/SAFP.g"; }


        private AccessRules accessRules = new AccessRules();
        public AccessRules getAccessRules() { return this.accessRules; }
        private Groups groups = new Groups();
        public Groups getGroups() { return this.groups; }
        private Users users = new Users();
        public Users getUsers() { return this.users; }
        private Aliases aliases = new Aliases();
        public Aliases getAliases() { return this.aliases; }


    public static class prog_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "prog"
    // com/soebes/subversion/sapm/parser/SAFP.g:64:1: prog : ( statement )* ;
    public final SAFPParser.prog_return prog() throws RecognitionException {
        SAFPParser.prog_return retval = new SAFPParser.prog_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        SAFPParser.statement_return statement1 = null;



        try {
            // com/soebes/subversion/sapm/parser/SAFP.g:65:5: ( ( statement )* )
            // com/soebes/subversion/sapm/parser/SAFP.g:65:7: ( statement )*
            {
            root_0 = (Object)adaptor.nil();

            // com/soebes/subversion/sapm/parser/SAFP.g:65:7: ( statement )*
            loop1:
            do {
                int alt1=2;
                switch ( input.LA(1) ) {
                case 13:
                    {
                    alt1=1;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // com/soebes/subversion/sapm/parser/SAFP.g:65:8: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_prog75);
            	    statement1=statement();

            	    state._fsp--;

            	    adaptor.addChild(root_0, statement1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "prog"

    public static class statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statement"
    // com/soebes/subversion/sapm/parser/SAFP.g:67:1: statement : ( groups | repos | aliases );
    public final SAFPParser.statement_return statement() throws RecognitionException {
        SAFPParser.statement_return retval = new SAFPParser.statement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        SAFPParser.groups_return groups2 = null;

        SAFPParser.repos_return repos3 = null;

        SAFPParser.aliases_return aliases4 = null;



        try {
            // com/soebes/subversion/sapm/parser/SAFP.g:68:5: ( groups | repos | aliases )
            int alt2=3;
            switch ( input.LA(1) ) {
            case 13:
                {
                switch ( input.LA(2) ) {
                case GROUPS:
                    {
                    alt2=1;
                    }
                    break;
                case ALIASES:
                    {
                    alt2=3;
                    }
                    break;
                case ID:
                case PATH:
                    {
                    alt2=2;
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;
                }

                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // com/soebes/subversion/sapm/parser/SAFP.g:68:7: groups
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_groups_in_statement89);
                    groups2=groups();

                    state._fsp--;

                    adaptor.addChild(root_0, groups2.getTree());

                    }
                    break;
                case 2 :
                    // com/soebes/subversion/sapm/parser/SAFP.g:69:7: repos
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_repos_in_statement97);
                    repos3=repos();

                    state._fsp--;

                    adaptor.addChild(root_0, repos3.getTree());
                     getAccessRules().add((repos3!=null?repos3.accessrule:null)); 

                    }
                    break;
                case 3 :
                    // com/soebes/subversion/sapm/parser/SAFP.g:70:7: aliases
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_aliases_in_statement107);
                    aliases4=aliases();

                    state._fsp--;

                    adaptor.addChild(root_0, aliases4.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "statement"

    public static class groups_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "groups"
    // com/soebes/subversion/sapm/parser/SAFP.g:73:1: groups : sectiongroup NL ( group EQUAL groupuserdefinition NL )* ;
    public final SAFPParser.groups_return groups() throws RecognitionException {
        SAFPParser.groups_return retval = new SAFPParser.groups_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token NL6=null;
        Token EQUAL8=null;
        Token NL10=null;
        SAFPParser.sectiongroup_return sectiongroup5 = null;

        SAFPParser.group_return group7 = null;

        SAFPParser.groupuserdefinition_return groupuserdefinition9 = null;


        Object NL6_tree=null;
        Object EQUAL8_tree=null;
        Object NL10_tree=null;

        try {
            // com/soebes/subversion/sapm/parser/SAFP.g:74:5: ( sectiongroup NL ( group EQUAL groupuserdefinition NL )* )
            // com/soebes/subversion/sapm/parser/SAFP.g:74:7: sectiongroup NL ( group EQUAL groupuserdefinition NL )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_sectiongroup_in_groups124);
            sectiongroup5=sectiongroup();

            state._fsp--;

            adaptor.addChild(root_0, sectiongroup5.getTree());
            NL6=(Token)match(input,NL,FOLLOW_NL_in_groups126); 
            NL6_tree = (Object)adaptor.create(NL6);
            adaptor.addChild(root_0, NL6_tree);

            // com/soebes/subversion/sapm/parser/SAFP.g:74:23: ( group EQUAL groupuserdefinition NL )*
            loop3:
            do {
                int alt3=2;
                switch ( input.LA(1) ) {
                case ID:
                    {
                    alt3=1;
                    }
                    break;

                }

                switch (alt3) {
            	case 1 :
            	    // com/soebes/subversion/sapm/parser/SAFP.g:74:24: group EQUAL groupuserdefinition NL
            	    {
            	    pushFollow(FOLLOW_group_in_groups129);
            	    group7=group();

            	    state._fsp--;

            	    adaptor.addChild(root_0, group7.getTree());
            	    EQUAL8=(Token)match(input,EQUAL,FOLLOW_EQUAL_in_groups131); 
            	    EQUAL8_tree = (Object)adaptor.create(EQUAL8);
            	    adaptor.addChild(root_0, EQUAL8_tree);

            	    pushFollow(FOLLOW_groupuserdefinition_in_groups133);
            	    groupuserdefinition9=groupuserdefinition();

            	    state._fsp--;

            	    adaptor.addChild(root_0, groupuserdefinition9.getTree());

            	              Group group = new Group((group7!=null?input.toString(group7.start,group7.stop):null));
            	              for (IPrincipal item:(groupuserdefinition9!=null?groupuserdefinition9.gud:null)) {
            	                group.add(item);
            	              }
            	              getGroups().add(group);
            	            
            	    NL10=(Token)match(input,NL,FOLLOW_NL_in_groups153); 
            	    NL10_tree = (Object)adaptor.create(NL10);
            	    adaptor.addChild(root_0, NL10_tree);


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "groups"

    public static class repos_return extends ParserRuleReturnScope {
        public AccessRule accessrule;;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "repos"
    // com/soebes/subversion/sapm/parser/SAFP.g:85:1: repos returns [ AccessRule accessrule; ] : sectionrule= sectionrepository NL perm= permissionrule ( NL )? (perm1= permissionrule ( NL )? )* ;
    public final SAFPParser.repos_return repos() throws RecognitionException {
        SAFPParser.repos_return retval = new SAFPParser.repos_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token NL11=null;
        Token NL12=null;
        Token NL13=null;
        SAFPParser.sectionrepository_return sectionrule = null;

        SAFPParser.permissionrule_return perm = null;

        SAFPParser.permissionrule_return perm1 = null;


        Object NL11_tree=null;
        Object NL12_tree=null;
        Object NL13_tree=null;

        try {
            // com/soebes/subversion/sapm/parser/SAFP.g:86:5: (sectionrule= sectionrepository NL perm= permissionrule ( NL )? (perm1= permissionrule ( NL )? )* )
            // com/soebes/subversion/sapm/parser/SAFP.g:86:7: sectionrule= sectionrepository NL perm= permissionrule ( NL )? (perm1= permissionrule ( NL )? )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_sectionrepository_in_repos178);
            sectionrule=sectionrepository();

            state._fsp--;

            adaptor.addChild(root_0, sectionrule.getTree());
            NL11=(Token)match(input,NL,FOLLOW_NL_in_repos180); 
            NL11_tree = (Object)adaptor.create(NL11);
            adaptor.addChild(root_0, NL11_tree);

            pushFollow(FOLLOW_permissionrule_in_repos192);
            perm=permissionrule();

            state._fsp--;

            adaptor.addChild(root_0, perm.getTree());

                        (sectionrule!=null?sectionrule.accessRule:null).add((perm!=null?perm.access:null));
                    
            // com/soebes/subversion/sapm/parser/SAFP.g:89:11: ( NL )?
            int alt4=2;
            switch ( input.LA(1) ) {
                case NL:
                    {
                    alt4=1;
                    }
                    break;
            }

            switch (alt4) {
                case 1 :
                    // com/soebes/subversion/sapm/parser/SAFP.g:89:11: NL
                    {
                    NL12=(Token)match(input,NL,FOLLOW_NL_in_repos196); 
                    NL12_tree = (Object)adaptor.create(NL12);
                    adaptor.addChild(root_0, NL12_tree);


                    }
                    break;

            }

            // com/soebes/subversion/sapm/parser/SAFP.g:90:9: (perm1= permissionrule ( NL )? )*
            loop6:
            do {
                int alt6=2;
                switch ( input.LA(1) ) {
                case ID:
                case 16:
                case 17:
                case 18:
                case 19:
                case 27:
                case 28:
                    {
                    alt6=1;
                    }
                    break;

                }

                switch (alt6) {
            	case 1 :
            	    // com/soebes/subversion/sapm/parser/SAFP.g:91:13: perm1= permissionrule ( NL )?
            	    {
            	    pushFollow(FOLLOW_permissionrule_in_repos223);
            	    perm1=permissionrule();

            	    state._fsp--;

            	    adaptor.addChild(root_0, perm1.getTree());

            	                    (sectionrule!=null?sectionrule.accessRule:null).add((perm1!=null?perm1.access:null));
            	                
            	    // com/soebes/subversion/sapm/parser/SAFP.g:94:13: ( NL )?
            	    int alt5=2;
            	    switch ( input.LA(1) ) {
            	        case NL:
            	            {
            	            alt5=1;
            	            }
            	            break;
            	    }

            	    switch (alt5) {
            	        case 1 :
            	            // com/soebes/subversion/sapm/parser/SAFP.g:94:13: NL
            	            {
            	            NL13=(Token)match(input,NL,FOLLOW_NL_in_repos239); 
            	            NL13_tree = (Object)adaptor.create(NL13);
            	            adaptor.addChild(root_0, NL13_tree);


            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);

             retval.accessrule = (sectionrule!=null?sectionrule.accessRule:null); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "repos"

    public static class aliases_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "aliases"
    // com/soebes/subversion/sapm/parser/SAFP.g:98:1: aliases : sectionaliases NL ( alias EQUAL useraliasdefinition NL )* ;
    public final SAFPParser.aliases_return aliases() throws RecognitionException {
        SAFPParser.aliases_return retval = new SAFPParser.aliases_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token NL15=null;
        Token EQUAL17=null;
        Token NL19=null;
        SAFPParser.sectionaliases_return sectionaliases14 = null;

        SAFPParser.alias_return alias16 = null;

        SAFPParser.useraliasdefinition_return useraliasdefinition18 = null;


        Object NL15_tree=null;
        Object EQUAL17_tree=null;
        Object NL19_tree=null;

        try {
            // com/soebes/subversion/sapm/parser/SAFP.g:99:5: ( sectionaliases NL ( alias EQUAL useraliasdefinition NL )* )
            // com/soebes/subversion/sapm/parser/SAFP.g:99:7: sectionaliases NL ( alias EQUAL useraliasdefinition NL )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_sectionaliases_in_aliases270);
            sectionaliases14=sectionaliases();

            state._fsp--;

            adaptor.addChild(root_0, sectionaliases14.getTree());
            NL15=(Token)match(input,NL,FOLLOW_NL_in_aliases272); 
            NL15_tree = (Object)adaptor.create(NL15);
            adaptor.addChild(root_0, NL15_tree);

            // com/soebes/subversion/sapm/parser/SAFP.g:100:9: ( alias EQUAL useraliasdefinition NL )*
            loop7:
            do {
                int alt7=2;
                switch ( input.LA(1) ) {
                case ID:
                    {
                    alt7=1;
                    }
                    break;

                }

                switch (alt7) {
            	case 1 :
            	    // com/soebes/subversion/sapm/parser/SAFP.g:101:13: alias EQUAL useraliasdefinition NL
            	    {
            	    pushFollow(FOLLOW_alias_in_aliases296);
            	    alias16=alias();

            	    state._fsp--;

            	    adaptor.addChild(root_0, alias16.getTree());
            	    EQUAL17=(Token)match(input,EQUAL,FOLLOW_EQUAL_in_aliases298); 
            	    EQUAL17_tree = (Object)adaptor.create(EQUAL17);
            	    adaptor.addChild(root_0, EQUAL17_tree);

            	    pushFollow(FOLLOW_useraliasdefinition_in_aliases300);
            	    useraliasdefinition18=useraliasdefinition();

            	    state._fsp--;

            	    adaptor.addChild(root_0, useraliasdefinition18.getTree());
            	    NL19=(Token)match(input,NL,FOLLOW_NL_in_aliases302); 
            	    NL19_tree = (Object)adaptor.create(NL19);
            	    adaptor.addChild(root_0, NL19_tree);


            	                  Alias alias = new Alias((alias16!=null?input.toString(alias16.start,alias16.stop):null), (useraliasdefinition18!=null?input.toString(useraliasdefinition18.start,useraliasdefinition18.stop):null));
            	                  getAliases().add(alias);
            	                

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "aliases"

    public static class group_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "group"
    // com/soebes/subversion/sapm/parser/SAFP.g:109:1: group : ID ;
    public final SAFPParser.group_return group() throws RecognitionException {
        SAFPParser.group_return retval = new SAFPParser.group_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ID20=null;

        Object ID20_tree=null;

        try {
            // com/soebes/subversion/sapm/parser/SAFP.g:110:5: ( ID )
            // com/soebes/subversion/sapm/parser/SAFP.g:110:7: ID
            {
            root_0 = (Object)adaptor.nil();

            ID20=(Token)match(input,ID,FOLLOW_ID_in_group344); 
            ID20_tree = (Object)adaptor.create(ID20);
            adaptor.addChild(root_0, ID20_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "group"

    public static class alias_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "alias"
    // com/soebes/subversion/sapm/parser/SAFP.g:113:1: alias : ID ;
    public final SAFPParser.alias_return alias() throws RecognitionException {
        SAFPParser.alias_return retval = new SAFPParser.alias_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ID21=null;

        Object ID21_tree=null;

        try {
            // com/soebes/subversion/sapm/parser/SAFP.g:114:5: ( ID )
            // com/soebes/subversion/sapm/parser/SAFP.g:114:7: ID
            {
            root_0 = (Object)adaptor.nil();

            ID21=(Token)match(input,ID,FOLLOW_ID_in_alias361); 
            ID21_tree = (Object)adaptor.create(ID21);
            adaptor.addChild(root_0, ID21_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "alias"

    public static class sectiongroup_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "sectiongroup"
    // com/soebes/subversion/sapm/parser/SAFP.g:117:1: sectiongroup : '[' GROUPS ']' ;
    public final SAFPParser.sectiongroup_return sectiongroup() throws RecognitionException {
        SAFPParser.sectiongroup_return retval = new SAFPParser.sectiongroup_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal22=null;
        Token GROUPS23=null;
        Token char_literal24=null;

        Object char_literal22_tree=null;
        Object GROUPS23_tree=null;
        Object char_literal24_tree=null;

        try {
            // com/soebes/subversion/sapm/parser/SAFP.g:118:5: ( '[' GROUPS ']' )
            // com/soebes/subversion/sapm/parser/SAFP.g:118:7: '[' GROUPS ']'
            {
            root_0 = (Object)adaptor.nil();

            char_literal22=(Token)match(input,13,FOLLOW_13_in_sectiongroup378); 
            char_literal22_tree = (Object)adaptor.create(char_literal22);
            adaptor.addChild(root_0, char_literal22_tree);

            GROUPS23=(Token)match(input,GROUPS,FOLLOW_GROUPS_in_sectiongroup380); 
            GROUPS23_tree = (Object)adaptor.create(GROUPS23);
            adaptor.addChild(root_0, GROUPS23_tree);

            char_literal24=(Token)match(input,14,FOLLOW_14_in_sectiongroup382); 
            char_literal24_tree = (Object)adaptor.create(char_literal24);
            adaptor.addChild(root_0, char_literal24_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "sectiongroup"

    public static class sectionaliases_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "sectionaliases"
    // com/soebes/subversion/sapm/parser/SAFP.g:121:1: sectionaliases : '[' ALIASES ']' ;
    public final SAFPParser.sectionaliases_return sectionaliases() throws RecognitionException {
        SAFPParser.sectionaliases_return retval = new SAFPParser.sectionaliases_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal25=null;
        Token ALIASES26=null;
        Token char_literal27=null;

        Object char_literal25_tree=null;
        Object ALIASES26_tree=null;
        Object char_literal27_tree=null;

        try {
            // com/soebes/subversion/sapm/parser/SAFP.g:122:5: ( '[' ALIASES ']' )
            // com/soebes/subversion/sapm/parser/SAFP.g:122:7: '[' ALIASES ']'
            {
            root_0 = (Object)adaptor.nil();

            char_literal25=(Token)match(input,13,FOLLOW_13_in_sectionaliases399); 
            char_literal25_tree = (Object)adaptor.create(char_literal25);
            adaptor.addChild(root_0, char_literal25_tree);

            ALIASES26=(Token)match(input,ALIASES,FOLLOW_ALIASES_in_sectionaliases401); 
            ALIASES26_tree = (Object)adaptor.create(ALIASES26);
            adaptor.addChild(root_0, ALIASES26_tree);

            char_literal27=(Token)match(input,14,FOLLOW_14_in_sectionaliases403); 
            char_literal27_tree = (Object)adaptor.create(char_literal27);
            adaptor.addChild(root_0, char_literal27_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "sectionaliases"

    public static class sectionrepository_return extends ParserRuleReturnScope {
        public AccessRule accessRule;;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "sectionrepository"
    // com/soebes/subversion/sapm/parser/SAFP.g:125:1: sectionrepository returns [ AccessRule accessRule; ] : '[' repository repositorypath ']' ;
    public final SAFPParser.sectionrepository_return sectionrepository() throws RecognitionException {
        SAFPParser.sectionrepository_return retval = new SAFPParser.sectionrepository_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal28=null;
        Token char_literal31=null;
        SAFPParser.repository_return repository29 = null;

        SAFPParser.repositorypath_return repositorypath30 = null;


        Object char_literal28_tree=null;
        Object char_literal31_tree=null;

        try {
            // com/soebes/subversion/sapm/parser/SAFP.g:126:5: ( '[' repository repositorypath ']' )
            // com/soebes/subversion/sapm/parser/SAFP.g:126:7: '[' repository repositorypath ']'
            {
            root_0 = (Object)adaptor.nil();

            char_literal28=(Token)match(input,13,FOLLOW_13_in_sectionrepository424); 
            char_literal28_tree = (Object)adaptor.create(char_literal28);
            adaptor.addChild(root_0, char_literal28_tree);

            pushFollow(FOLLOW_repository_in_sectionrepository426);
            repository29=repository();

            state._fsp--;
